# agnosticos

./: .audit.toml  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.takumi  Makefile  README.md  SECURITY.md  SUPPORT.md  TODO.md  VERSION  os_long_term.md  osv-scanner.toml
userland/: Cargo.toml  Cross.toml  cobertura.xml  tarpaulin-report.html  tarpaulin-report.json
userland/agent-runtime/: Cargo.toml
userland/agent-runtime/benches/: bench.rs  runtime_benchmarks.rs  system_bench.rs  vector_search_bench.rs
userland/agent-runtime/src/: aegis.rs  agent.rs  agnova.rs  argonaut.rs  ark.rs  capability.rs  cli.rs  cloud.rs  collaboration.rs  daemon_config.rs  database.rs  delegation.rs  edge.rs  explainability.rs  federation.rs  file_watcher.rs  finetune.rs  formal_verify.rs  grpc.rs  health.rs  http_api.rs  integrity.rs  ipc.rs  knowledge_base.rs  learning.rs  lib.rs  lifecycle.rs  main.rs  marketplace_backend.rs  mcp_server.rs  memory_store.rs  migration.rs  mtls.rs  multimodal.rs  network_tools.rs  nous.rs  oidc.rs  orchestrator.rs  package_manager.rs  phylax.rs  (+27 more)
userland/agent-runtime/src/agnova/: rootfs.rs  tests.rs
userland/agent-runtime/src/argonaut/: services.rs  tests.rs
userland/agent-runtime/src/ark/: mod.rs  tests.rs  types.rs
userland/agent-runtime/src/commands/: agent.rs  daemon.rs  mod.rs  package.rs  service.rs
userland/agent-runtime/src/edge/: fleet.rs  mod.rs  mqtt_bridge.rs  ota.rs  routing.rs  telemetry.rs  tests.rs  types.rs
userland/agent-runtime/src/federation/: discovery.rs  gossip.rs  mod.rs  sync.rs  tests.rs  types.rs  vector_store.rs
userland/agent-runtime/src/http_api/: middleware.rs  mod.rs  state.rs  tests.rs  types.rs
userland/agent-runtime/src/http_api/handlers/: agents.rs  anomaly.rs  ark.rs  attestation.rs  audit.rs  dashboard.rs  database.rs  edge.rs  exec.rs  files.rs  handshake.rs  marketplace.rs  memory.rs  mod.rs  profiles.rs  rag.rs  reasoning.rs  rpc.rs  sandbox.rs  scan.rs  screen_capture.rs  system_update.rs  traces.rs  vectors.rs  webhooks.rs
userland/agent-runtime/src/marketplace/: flutter_agpkg.rs  flutter_packaging.rs  local_registry.rs  mod.rs  ratings.rs  remote_client.rs  sandbox_profiles.rs  transparency.rs  trust.rs
userland/agent-runtime/src/mcp_server/: discovery.rs  helpers.rs  manifest.rs  mod.rs  tests.rs  tool_sandbox.rs  types.rs
userland/agent-runtime/src/mcp_server/handlers/: aequi.rs  agnos.rs  agnostic.rs  bridge.rs  bullshift.rs  delta.rs  edge.rs  jalwa.rs  mneme.rs  mod.rs  photis.rs  phylax.rs  rasa.rs  shruti.rs  synapse.rs  tarang.rs  tazama.rs  yeoman.rs  yeoman_bridge.rs
userland/agent-runtime/src/network_tools/: capture.rs  dns.rs  mod.rs  nmap.rs  parse.rs  runner.rs  scanners.rs  tests.rs  types.rs
userland/agent-runtime/src/orchestrator/: lifecycle.rs  mod.rs  routing.rs  scheduling.rs  scoring.rs  state.rs  tests.rs  types.rs
userland/agent-runtime/src/sandbox_mod/: backends.rs  credential_proxy.rs  egress_gate.rs  mod.rs  monitor.rs  sandbox_core.rs  v2.rs
userland/agent-runtime/src/service_manager/: health.rs  lifecycle.rs  mod.rs  tests.rs  types.rs
userland/agent-runtime/src/sigil/: chain.rs  mod.rs  tests.rs  verify.rs
userland/agent-runtime/src/supervisor/: cgroup.rs  circuit_breaker.rs  health_check.rs  mod.rs  output_capture.rs  proc_utils.rs  recovery.rs  resource_monitor.rs  resource_quota.rs  tests.rs
userland/agent-runtime/tests/: integration.rs  load_tests.rs  system_tests.rs
userland/agnos-common/: Cargo.toml
userland/agnos-common/benches/: agnos_common.rs
userland/agnos-common/src/: agent.rs  audit.rs  config.rs  error.rs  lib.rs  llm.rs  secrets.rs  security.rs  security_tests.rs  telemetry.rs  types.rs
userland/agnos-sudo/: Cargo.toml
userland/agnos-sudo/src/: main.rs
userland/agnos-sys/: Cargo.toml
userland/agnos-sys/src/: agent.rs  audit.rs  bootloader.rs  certpin.rs  dmverity.rs  fuse.rs  ima.rs  journald.rs  lib.rs  llm.rs  luks.rs  mac.rs  netns.rs  pam.rs  secureboot.rs  security.rs  syscall.rs  tpm.rs  udev.rs  update.rs
userland/ai-shell/: Cargo.toml
userland/ai-shell/benches/: ai_shell.rs  intent_parsing.rs  system_bench.rs
userland/ai-shell/src/: aliases.rs  approval.rs  audit.rs  commands.rs  completion.rs  config.rs  dashboard.rs  history.rs  interpreter.rs  lib.rs  llm.rs  main.rs  mode.rs  output.rs  permissions.rs  prompt.rs  sandbox.rs  schema_filter.rs  security.rs  session.rs  ui.rs
userland/ai-shell/src/interpreter/: explain.rs  intent.rs  mod.rs  parse.rs  patterns.rs  tests.rs
userland/ai-shell/src/interpreter/parse/: creative.rs  mod.rs  platforms.rs  system.rs  tools.rs
userland/ai-shell/src/interpreter/translate/: aequi.rs  agnos.rs  agnostic.rs  bullshift.rs  delta.rs  edge.rs  jalwa.rs  (+19 more)
userland/desktop-environment/: Cargo.toml
userland/desktop-environment/benches/: compositor_benchmarks.rs  screen_capture_bench.rs
userland/desktop-environment/src/: accessibility.rs  ai_features.rs  apps.rs  compositor.rs  gestures.rs  lib.rs  main.rs  plugin_host.rs  renderer.rs  screen_capture.rs  screen_recording.rs  security_ui.rs  shell.rs  shell_integration.rs  system_tests.rs  theme_bridge.rs  wayland.rs  xwayland.rs
userland/desktop-environment/src/hud/: crew_status.rs  domain_filter.rs  gpu_status.rs  mod.rs
userland/desktop-environment/src/wayland/: mod.rs  popups.rs  protocol.rs  server.rs  stub.rs  tests.rs  types.rs
userland/docs/api/: explorer.html
userland/examples/: Cargo.toml  file-manager-agent.rs  quick_start.rs
userland/examples/src/: agent.rs  lib.rs
userland/fuzz/: Cargo.toml  fuzz_agent_parse.rs  fuzz_command_split.rs  fuzz_interpreter.rs  fuzz_ipc_framing.rs  fuzz_llm_inference.rs  fuzz_provider_response.rs  fuzz_secrets_parse.rs
userland/llm-gateway/: Cargo.toml
userland/llm-gateway/benches/: gateway_benchmarks.rs  llm_gateway.rs  system_bench.rs
userland/llm-gateway/src/: acceleration.rs  accounting.rs  cache.rs  http.rs  lib.rs  main.rs  mcp_proxy.rs  providers.rs  rate_limiter.rs
(+766 files in other folders)
