[workspace]
members = [
    "agnos-common",
    "agnos-sys",
    "agent-runtime",
    "ai-shell",
    "llm-gateway",
    "desktop-environment",
    "agnos-sudo",
    "examples",
]
resolver = "2"

[workspace.package]
version = "2026.3.18"
authors = ["AGNOS Team <team@agnos.org>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/agnos/agnos"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
tonic = "0.10"
prost = "0.12"
futures = "0.3"
async-trait = "0.1"
libc = "0.2"
parking_lot = "0.12"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }

# AGNOS internal dependencies
agnos-common = { path = "agnos-common" }
agnos-sys = { path = "agnos-sys" }
desktop_environment = { path = "desktop-environment" }

base64 = "0.22"
rumqttc = "0.24"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Edge profile — optimized for binary size over speed.
# Build with: cargo build --profile release-edge
[profile.release-edge]
inherits = "release"
opt-level = "s"
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.coverage]
inherits = "dev"
debug = false
opt-level = 0
lto = false
codegen-units = 16
strip = false
