[workspace]
members = [
    "agnos-common",
    "agnos-sys",
    "agent-runtime",
    "ai-shell",
    "llm-gateway",
    "desktop-environment",
    "agnos-sudo",
    "examples",
]
resolver = "2"

[workspace.package]
version = "2026.3.30"
authors = ["AGNOS Team <team@agnos.org>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/agnos/agnos"
rust-version = "1.89"

[workspace.dependencies]
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.6", features = ["derive"] }
config = "0.15"
tonic = "0.14"
prost = "0.14"
futures = "0.3"
async-trait = "0.1"
libc = "0.2"
parking_lot = "0.12"
dashmap = "6.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query"] }
sha2 = "0.11"
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }

# AGNOS internal dependencies
agnos-common = { path = "agnos-common" }
agnos-sys = { path = "agnos-sys" }
agnosys = { path = "../../agnosys", features = ["full"] }
desktop_environment = { path = "desktop-environment" }

base64 = "0.22"
rumqttc = "0.25"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Edge profile — optimized for binary size over speed.
# Build with: cargo build --profile release-edge
[profile.release-edge]
inherits = "release"
opt-level = "s"
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.coverage]
inherits = "dev"
debug = false
opt-level = 0
lto = false
codegen-units = 16
strip = false
