[workspace]
members = [
    "examples",
]
resolver = "2"

[workspace.package]
version = "2026.3.31"
authors = ["AGNOS Team <team@agnos.org>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/agnos/agnos"
rust-version = "1.89"

[workspace.dependencies]
# Used by examples
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# AGNOS internal dependencies
agnostik = { git = "https://github.com/MacCracken/agnostik.git", tag = "0.90.0", features = ["full"] }
agnosys = { git = "https://github.com/MacCracken/agnosys.git", tag = "0.51.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Edge profile — optimized for binary size over speed.
# Build with: cargo build --profile release-edge
[profile.release-edge]
inherits = "release"
opt-level = "s"
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.coverage]
inherits = "dev"
debug = false
opt-level = 0
lto = false
codegen-units = 16
strip = false
