[package]
name = "agent_runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AGNOS agent runtime"

[[bin]]
name = "agent_runtime"
path = "src/main.rs"

[dependencies]
agnos-common = { workspace = true }
agnos-sys = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
nix = { version = "0.27", features = ["process", "signal"] }
libc = "0.2"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }

wasmtime = { version = "27", optional = true }
wasmtime-wasi = { version = "27", optional = true }

[features]
default = []
wasm = ["wasmtime", "wasmtime-wasi"]

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "system_bench"
harness = false
