[package]
name = "agent_runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AGNOS agent runtime"

[[bin]]
name = "agent_runtime"
path = "src/main.rs"

[dependencies]
agnos-common = { workspace = true }
agnos-sys = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
nix = { version = "0.27", features = ["process", "signal"] }
once_cell = "1.19"
toml = "0.8"
libc = "0.2"
sha2 = "0.10"
hmac = "0.12"
regex = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
flate2 = "1"
tar = "0.4"
rand = "0.8"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
hostname = "0.3"
tokio-stream = "0.1"
desktop_environment = { workspace = true, optional = true }
base64 = { workspace = true }
url = "2"
rumqttc = { workspace = true }
ai-hwaccel = "0.20"

wasmtime = { version = "42", optional = true }
wasmtime-wasi = { version = "42", optional = true }

[features]
default = ["desktop"]
desktop = ["dep:desktop_environment"]
wasm = ["wasmtime", "wasmtime-wasi"]

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "system_bench"
harness = false

[[bench]]
name = "runtime_benchmarks"
harness = false

[[bench]]
name = "vector_search_bench"
harness = false
