[package]
name = "agnos-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Common types and utilities for AGNOS"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rand = "0.8"
once_cell = "1.19"
aes-gcm = "0.10"
getrandom = "0.2"
async-trait = { workspace = true }
num_cpus = "1.16"
subtle = "2.5"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "agnos_common"
harness = false
