[package]
name = "agnos-sudo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AGNOS privilege escalation tool with PAM authentication and audit logging"

[[bin]]
name = "agnos-sudo"
path = "src/main.rs"

[dependencies]
agnos-common = { path = "../agnos-common" }
agnos-sys = { path = "../agnos-sys" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
nix = { version = "0.29", features = ["user", "process", "signal"] }
