[package]
name = "agnos-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "AGNOS kernel syscall bindings and low-level system interface — published externally as agnosys"

[dependencies]
# New: agnosys provides the actual implementations
agnosys = { workspace = true }

# Legacy deps — kept for existing consumer compatibility during migration
agnos-common = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
libc = "0.2"
nix = { version = "0.31", features = ["process", "sched", "mount", "user"] }
reqwest = { workspace = true, features = ["json", "blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bitflags = "2.4"
once_cell = "1.19"
sha2 = { workspace = true }
hex = "0.4"
zeroize = "1.7"

[build-dependencies]
bindgen = "0.69"

[features]
default = []
kernel-module = []
