[package]
name = "ai_shell"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AGNOS AI Shell - Natural language interface with human oversight"

[[bin]]
name = "agnsh"
path = "src/main.rs"

[dependencies]
agnos-common = { workspace = true }
agnos-sys = { workspace = true }
tokio = { workspace = true, features = ["full", "process"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
ratatui = "0.24"
crossterm = "0.27"
reqwest = { version = "0.11", features = ["json"] }
tokio-stream = "0.1"
fuzzy-matcher = "0.3"
shellexpand = "3.1"
dirs = "5.0"
regex = "1.10"
shlex = "1.3"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
ansi_term = "0.12"
hostname = "0.3"
chrono = { workspace = true }
git2 = { version = "0.18", optional = true }
starship-battery = { version = "0.18", optional = true }
toml = "0.8"
