[package]
name = "ai_shell"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AGNOS AI Shell - Natural language interface with human oversight"

[[bin]]
name = "agnsh"
path = "src/main.rs"

[dependencies]
agnos-common = { workspace = true }
agnos-sys = { workspace = true }
tokio = { workspace = true, features = ["full", "process"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
crossterm = "0.27"
reqwest = { workspace = true }
tokio-stream = "0.1"
fuzzy-matcher = "0.3"
shellexpand = "3.1"
dirs = "5.0"
regex = "1.10"
once_cell = "1.19"
shlex = "1.3"
console = "0.15"
dialoguer = "0.11"
hostname = "0.3"
chrono = { workspace = true }
nix = { version = "0.31", features = ["process", "signal", "user"] }
toml = "0.8"

[dev-dependencies]
criterion = "0.5"
tokio = { workspace = true, features = ["full"] }

[[bench]]
name = "ai_shell"
harness = false

[[bench]]
name = "system_bench"
harness = false

[[bench]]
name = "intent_parsing"
harness = false
