[package]
name = "desktop_environment"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AGNOS desktop environment - AI-augmented Wayland compositor"

[[bin]]
name = "desktop_environment"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
agnos-common = { workspace = true }
agnos-sys = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
dashmap = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["wayland", "ai"]

wayland = []
ai = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
