[package]
name = "desktop_environment"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AGNOS desktop environment - AI-augmented Wayland compositor"

[[bin]]
name = "desktop_environment"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
default = []
wayland = ["wayland-server", "wayland-protocols", "wayland-protocols-wlr"]

[dependencies]
wayland-server = { version = "0.31", optional = true }
wayland-protocols = { version = "0.31", features = ["server"], optional = true }
wayland-protocols-wlr = { version = "0.2", features = ["server"], optional = true }
agnos-common = { workspace = true }
agnos-sys = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
dashmap = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compositor_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
