[package]
name = "agnos-examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[example]]
name = "quick_start"
path = "quick_start.rs"

[[example]]
name = "file_manager_agent"
path = "file-manager-agent.rs"

[dependencies]
agnos-common = { path = "../agnos-common" }
agnos-sys = { path = "../agnos-sys" }
serde_json = { workspace = true }
tokio = { workspace = true }
