[package]
name = "agnos-examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[example]]
name = "quick_start"
path = "quick_start.rs"

[[example]]
name = "file_manager_agent"
path = "file-manager-agent.rs"

[dependencies]
agnostik = { workspace = true }
agnosys = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
