[package]
name = "llm_gateway"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AGNOS llm gateway"

[[bin]]
name = "llm_gateway"
path = "src/main.rs"

[dependencies]
agnos-common = { workspace = true }
agnos-sys = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
nix = { version = "0.31", features = ["process", "signal"] }
reqwest = { workspace = true, features = ["stream"] }
futures = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
url = "2"
async-stream = "0.3"
ai-hwaccel = "0.23"

[lib]
name = "llm_gateway"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[[bench]]
name = "llm_gateway"
harness = false

[[bench]]
name = "system_bench"
harness = false

[[bench]]
name = "gateway_benchmarks"
harness = false
